--- a/src/main/resources/templates/data.html
+++ b/src/main/resources/templates/data.html
@@ -8,6 +8,6 @@
     <title>Data Render</title>
 </head>
 <body>
-    <div th:text="${message}"></div>
+    The message is:<div th:text="${message}"></div>
 </body>
 </html>
